packages/swift/Sources/CVoicevoxCore/include/voicevox_core.h

typedef int32_t VoicevoxResultCode;
/**
 * 音声シンセサイザ。
 *
 * <b>構築</b>(_construction_)は ::voicevox_synthesizer_new で行い、<b>破棄</b>(_destruction_)は ::voicevox_synthesizer_delete で行う。
 *
 * \orig-impl{VoicevoxSynthesizer}
 */
typedef struct VoicevoxSynthesizer VoicevoxSynthesizer;
/**
 * 音声モデルID。
 *
 * ::VoicevoxSynthesizer はこのIDをキーとして、音声モデルのロード・アンロードを行う。
 *
 * 同じIDを持つ複数のVVMファイルがあるときは、ファイルとして新しい方を常に使うことが推奨される。[VOICEVOX/voicevox_vvm]で管理されているVVMでは、次の方針が取られている。
 *
 * - VVMに含まれる声が変化せず、軽微な修正のみのときはIDを使い回してリリースする。
 * - VVMに含まれる声が明確に変化するかもしくは削除されるような実質的な変更のときは、新しいIDを割り振ってリリースする。
 *
 * これ以外は未定であり、更なるルールについては[VOICEVOX/voicevox_vvm#19]で議論される予定。
 *
 * \orig-impl{VoicevoxVoiceModelId}
 *
 * [VOICEVOX/voicevox_vvm]: https://github.com/VOICEVOX/voicevox_vvm
 * [VOICEVOX/voicevox_vvm#19]: https://github.com/VOICEVOX/voicevox_vvm/issues/19
 */
typedef const uint8_t (*VoicevoxVoiceModelId)[16];
/**
 * スタイルID。
 *
 * VOICEVOXにおける、ある<i>キャラクター</i>のある<i>スタイル</i>を指す。
 *
 * \orig-impl{VoicevoxStyleId}
 */
typedef uint32_t VoicevoxStyleId;
/**
 * ::voicevox_synthesizer_synthesis のオプション。
 *
 * \no-orig-impl{VoicevoxSynthesisOptions}
 */
typedef struct VoicevoxSynthesisOptions {
  /**
   * 疑問文の調整を有効にする
   */
  bool enable_interrogative_upspeak;
} VoicevoxSynthesisOptions;
/**
 * ::voicevox_synthesizer_tts のオプション。
 *
 * \no-orig-impl{VoicevoxTtsOptions}
 */
typedef struct VoicevoxTtsOptions {
  /**
   * 疑問文の調整を有効にする
   */
  bool enable_interrogative_upspeak;
} VoicevoxTtsOptions;
VoicevoxResultCode voicevox_synthesizer_create_accent_phrases_from_kana(const struct VoicevoxSynthesizer *synthesizer,
                                                                        const char *kana,
                                                                        VoicevoxStyleId style_id,
                                                                        char **output_accent_phrases_json);
VoicevoxResultCode voicevox_synthesizer_create_accent_phrases(const struct VoicevoxSynthesizer *synthesizer,
                                                              const char *text,
                                                              VoicevoxStyleId style_id,
                                                              char **output_accent_phrases_json);
VoicevoxResultCode voicevox_synthesizer_replace_mora_data(const struct VoicevoxSynthesizer *synthesizer,
                                                          const char *accent_phrases_json,
                                                          VoicevoxStyleId style_id,
                                                          char **output_accent_phrases_json);
VoicevoxResultCode voicevox_synthesizer_replace_phoneme_length(const struct VoicevoxSynthesizer *synthesizer,
                                                               const char *accent_phrases_json,
                                                               VoicevoxStyleId style_id,
                                                               char **output_accent_phrases_json);
VoicevoxResultCode voicevox_synthesizer_replace_mora_pitch(const struct VoicevoxSynthesizer *synthesizer,
                                                           const char *accent_phrases_json,
                                                           VoicevoxStyleId style_id,
                                                           char **output_accent_phrases_json);
struct VoicevoxSynthesisOptions voicevox_make_default_synthesis_options(void);
VoicevoxResultCode voicevox_synthesizer_synthesis(const struct VoicevoxSynthesizer *synthesizer,
                                                  const char *audio_query_json,
                                                  VoicevoxStyleId style_id,
                                                  struct VoicevoxSynthesisOptions options,
                                                  uintptr_t *output_wav_length,
                                                  uint8_t **output_wav);
struct VoicevoxTtsOptions voicevox_make_default_tts_options(void);
VoicevoxResultCode voicevox_synthesizer_tts_from_kana(const struct VoicevoxSynthesizer *synthesizer,
                                                      const char *kana,
                                                      VoicevoxStyleId style_id,
                                                      struct VoicevoxTtsOptions options,
                                                      uintptr_t *output_wav_length,
                                                      uint8_t **output_wav);
VoicevoxResultCode voicevox_synthesizer_tts(const struct VoicevoxSynthesizer *synthesizer,
                                            const char *text,
                                            VoicevoxStyleId style_id,
                                            struct VoicevoxTtsOptions options,
                                            uintptr_t *output_wav_length,
                                            uint8_t **output_wav);
VoicevoxResultCode voicevox_synthesizer_create_sing_frame_audio_query(const struct VoicevoxSynthesizer *synthesizer,
                                                                      const char *score_json,
                                                                      VoicevoxStyleId style_id,
                                                                      char **output_frame_audio_query_json);
VoicevoxResultCode voicevox_synthesizer_create_sing_frame_f0(const struct VoicevoxSynthesizer *synthesizer,
                                                             const char *score_json,
                                                             const char *frame_audio_query_json,
                                                             VoicevoxStyleId style_id,
                                                             char **output_f0_json);