packages/flutter/lib/src/bindings.g.dart


  late final _voicevox_synthesizer_create_accent_phrases_from_kanaPtr = _lookup<
          ffi.NativeFunction<
              VoicevoxResultCode1 Function(
                  ffi.Pointer<VoicevoxSynthesizer>,
                  ffi.Pointer<ffi.Char>,
                  VoicevoxStyleId,
                  ffi.Pointer<ffi.Pointer<ffi.Char>>)>>(
      'voicevox_synthesizer_create_accent_phrases_from_kana');
  late final _voicevox_synthesizer_create_accent_phrases_from_kana =
      _voicevox_synthesizer_create_accent_phrases_from_kanaPtr.asFunction<
          int Function(ffi.Pointer<VoicevoxSynthesizer>, ffi.Pointer<ffi.Char>,
              int, ffi.Pointer<ffi.Pointer<ffi.Char>>)>();

  int voicevox_synthesizer_create_accent_phrases(
    ffi.Pointer<VoicevoxSynthesizer> synthesizer,
    ffi.Pointer<ffi.Char> text,
    int style_id,
    ffi.Pointer<ffi.Pointer<ffi.Char>> output_accent_phrases_json,
  ) {
    return _voicevox_synthesizer_create_accent_phrases(
      synthesizer,
      text,
      style_id,
      output_accent_phrases_json,
    );
  }

  late final _voicevox_synthesizer_create_accent_phrasesPtr = _lookup<
          ffi.NativeFunction<
              VoicevoxResultCode1 Function(
                  ffi.Pointer<VoicevoxSynthesizer>,
                  ffi.Pointer<ffi.Char>,
                  VoicevoxStyleId,
                  ffi.Pointer<ffi.Pointer<ffi.Char>>)>>(
      'voicevox_synthesizer_create_accent_phrases');
  late final _voicevox_synthesizer_create_accent_phrases =
      _voicevox_synthesizer_create_accent_phrasesPtr.asFunction<
          int Function(ffi.Pointer<VoicevoxSynthesizer>, ffi.Pointer<ffi.Char>,
              int, ffi.Pointer<ffi.Pointer<ffi.Char>>)>();

  int voicevox_synthesizer_replace_mora_data(
    ffi.Pointer<VoicevoxSynthesizer> synthesizer,
    ffi.Pointer<ffi.Char> accent_phrases_json,
    int style_id,
    ffi.Pointer<ffi.Pointer<ffi.Char>> output_accent_phrases_json,
  ) {
    return _voicevox_synthesizer_replace_mora_data(
      synthesizer,
      accent_phrases_json,
      style_id,
      output_accent_phrases_json,
    );
  }

  late final _voicevox_synthesizer_replace_mora_dataPtr = _lookup<
          ffi.NativeFunction<
              VoicevoxResultCode1 Function(
                  ffi.Pointer<VoicevoxSynthesizer>,
                  ffi.Pointer<ffi.Char>,
                  VoicevoxStyleId,
                  ffi.Pointer<ffi.Pointer<ffi.Char>>)>>(
      'voicevox_synthesizer_replace_mora_data');
  late final _voicevox_synthesizer_replace_mora_data =
      _voicevox_synthesizer_replace_mora_dataPtr.asFunction<
          int Function(ffi.Pointer<VoicevoxSynthesizer>, ffi.Pointer<ffi.Char>,
              int, ffi.Pointer<ffi.Pointer<ffi.Char>>)>();

  int voicevox_synthesizer_replace_phoneme_length(
    ffi.Pointer<VoicevoxSynthesizer> synthesizer,
    ffi.Pointer<ffi.Char> accent_phrases_json,
    int style_id,
    ffi.Pointer<ffi.Pointer<ffi.Char>> output_accent_phrases_json,
  ) {
    return _voicevox_synthesizer_replace_phoneme_length(
      synthesizer,
      accent_phrases_json,
      style_id,
      output_accent_phrases_json,
    );
  }

  late final _voicevox_synthesizer_replace_phoneme_lengthPtr = _lookup<
          ffi.NativeFunction<
              VoicevoxResultCode1 Function(
                  ffi.Pointer<VoicevoxSynthesizer>,
                  ffi.Pointer<ffi.Char>,
                  VoicevoxStyleId,
                  ffi.Pointer<ffi.Pointer<ffi.Char>>)>>(
      'voicevox_synthesizer_replace_phoneme_length');
  late final _voicevox_synthesizer_replace_phoneme_length =
      _voicevox_synthesizer_replace_phoneme_lengthPtr.asFunction<
          int Function(ffi.Pointer<VoicevoxSynthesizer>, ffi.Pointer<ffi.Char>,
              int, ffi.Pointer<ffi.Pointer<ffi.Char>>)>();

  int voicevox_synthesizer_replace_mora_pitch(
    ffi.Pointer<VoicevoxSynthesizer> synthesizer,
    ffi.Pointer<ffi.Char> accent_phrases_json,
    int style_id,
    ffi.Pointer<ffi.Pointer<ffi.Char>> output_accent_phrases_json,
  ) {
    return _voicevox_synthesizer_replace_mora_pitch(
      synthesizer,
      accent_phrases_json,
      style_id,
      output_accent_phrases_json,
    );
  }

  late final _voicevox_synthesizer_replace_mora_pitchPtr = _lookup<
          ffi.NativeFunction<
              VoicevoxResultCode1 Function(
                  ffi.Pointer<VoicevoxSynthesizer>,
                  ffi.Pointer<ffi.Char>,
                  VoicevoxStyleId,
                  ffi.Pointer<ffi.Pointer<ffi.Char>>)>>(
      'voicevox_synthesizer_replace_mora_pitch');
  late final _voicevox_synthesizer_replace_mora_pitch =
      _voicevox_synthesizer_replace_mora_pitchPtr.asFunction<
          int Function(ffi.Pointer<VoicevoxSynthesizer>, ffi.Pointer<ffi.Char>,
              int, ffi.Pointer<ffi.Pointer<ffi.Char>>)>();

  VoicevoxSynthesisOptions voicevox_make_default_synthesis_options() {
    return _voicevox_make_default_synthesis_options();
  }

  late final _voicevox_make_default_synthesis_optionsPtr =
      _lookup<ffi.NativeFunction<VoicevoxSynthesisOptions Function()>>(
          'voicevox_make_default_synthesis_options');
  late final _voicevox_make_default_synthesis_options =
      _voicevox_make_default_synthesis_optionsPtr
          .asFunction<VoicevoxSynthesisOptions Function()>();

  int voicevox_synthesizer_synthesis(
    ffi.Pointer<VoicevoxSynthesizer> synthesizer,
    ffi.Pointer<ffi.Char> audio_query_json,
    int style_id,
    VoicevoxSynthesisOptions options,
    ffi.Pointer<ffi.UintPtr> output_wav_length,
    ffi.Pointer<ffi.Pointer<ffi.Uint8>> output_wav,
  ) {
    return _voicevox_synthesizer_synthesis(
      synthesizer,
      audio_query_json,
      style_id,
      options,
      output_wav_length,
      output_wav,
    );
  }

  late final _voicevox_synthesizer_synthesisPtr = _lookup<
          ffi.NativeFunction<
              VoicevoxResultCode1 Function(
                  ffi.Pointer<VoicevoxSynthesizer>,
                  ffi.Pointer<ffi.Char>,
                  VoicevoxStyleId,
                  VoicevoxSynthesisOptions,
                  ffi.Pointer<ffi.UintPtr>,
                  ffi.Pointer<ffi.Pointer<ffi.Uint8>>)>>(
      'voicevox_synthesizer_synthesis');
  late final _voicevox_synthesizer_synthesis =
      _voicevox_synthesizer_synthesisPtr.asFunction<
          int Function(
              ffi.Pointer<VoicevoxSynthesizer>,
              ffi.Pointer<ffi.Char>,
              int,
              VoicevoxSynthesisOptions,
              ffi.Pointer<ffi.UintPtr>,
              ffi.Pointer<ffi.Pointer<ffi.Uint8>>)>();

  VoicevoxTtsOptions voicevox_make_default_tts_options() {
    return _voicevox_make_default_tts_options();
  }

  late final _voicevox_make_default_tts_optionsPtr =
      _lookup<ffi.NativeFunction<VoicevoxTtsOptions Function()>>(
          'voicevox_make_default_tts_options');
  late final _voicevox_make_default_tts_options =
      _voicevox_make_default_tts_optionsPtr
          .asFunction<VoicevoxTtsOptions Function()>();

  int voicevox_synthesizer_tts_from_kana(
    ffi.Pointer<VoicevoxSynthesizer> synthesizer,
    ffi.Pointer<ffi.Char> kana,
    int style_id,
    VoicevoxTtsOptions options,
    ffi.Pointer<ffi.UintPtr> output_wav_length,
    ffi.Pointer<ffi.Pointer<ffi.Uint8>> output_wav,
  ) {
    return _voicevox_synthesizer_tts_from_kana(
      synthesizer,
      kana,
      style_id,
      options,
      output_wav_length,
      output_wav,
    );
  }

  late final _voicevox_synthesizer_tts_from_kanaPtr = _lookup<
          ffi.NativeFunction<
              VoicevoxResultCode1 Function(
                  ffi.Pointer<VoicevoxSynthesizer>,
                  ffi.Pointer<ffi.Char>,
                  VoicevoxStyleId,
                  VoicevoxTtsOptions,
                  ffi.Pointer<ffi.UintPtr>,
                  ffi.Pointer<ffi.Pointer<ffi.Uint8>>)>>(
      'voicevox_synthesizer_tts_from_kana');
  late final _voicevox_synthesizer_tts_from_kana =
      _voicevox_synthesizer_tts_from_kanaPtr.asFunction<
          int Function(
              ffi.Pointer<VoicevoxSynthesizer>,
              ffi.Pointer<ffi.Char>,
              int,
              VoicevoxTtsOptions,
              ffi.Pointer<ffi.UintPtr>,
              ffi.Pointer<ffi.Pointer<ffi.Uint8>>)>();

  int voicevox_synthesizer_tts(
    ffi.Pointer<VoicevoxSynthesizer> synthesizer,
    ffi.Pointer<ffi.Char> text,
    int style_id,
    VoicevoxTtsOptions options,
    ffi.Pointer<ffi.UintPtr> output_wav_length,
    ffi.Pointer<ffi.Pointer<ffi.Uint8>> output_wav,
  ) {
    return _voicevox_synthesizer_tts(
      synthesizer,
      text,
      style_id,
      options,
      output_wav_length,
      output_wav,
    );
  }

  late final _voicevox_synthesizer_ttsPtr = _lookup<
          ffi.NativeFunction<
              VoicevoxResultCode1 Function(
                  ffi.Pointer<VoicevoxSynthesizer>,
                  ffi.Pointer<ffi.Char>,
                  VoicevoxStyleId,
                  VoicevoxTtsOptions,
                  ffi.Pointer<ffi.UintPtr>,
                  ffi.Pointer<ffi.Pointer<ffi.Uint8>>)>>(
      'voicevox_synthesizer_tts');
  late final _voicevox_synthesizer_tts =
      _voicevox_synthesizer_ttsPtr.asFunction<
          int Function(
              ffi.Pointer<VoicevoxSynthesizer>,
              ffi.Pointer<ffi.Char>,
              int,
              VoicevoxTtsOptions,
              ffi.Pointer<ffi.UintPtr>,
              ffi.Pointer<ffi.Pointer<ffi.Uint8>>)>();

  int voicevox_synthesizer_create_sing_frame_audio_query(
    ffi.Pointer<VoicevoxSynthesizer> synthesizer,
    ffi.Pointer<ffi.Char> score_json,
    int style_id,
    ffi.Pointer<ffi.Pointer<ffi.Char>> output_frame_audio_query_json,
  ) {
    return _voicevox_synthesizer_create_sing_frame_audio_query(
      synthesizer,
      score_json,
      style_id,
      output_frame_audio_query_json,
    );
  }

  late final _voicevox_synthesizer_create_sing_frame_audio_queryPtr = _lookup<
          ffi.NativeFunction<
              VoicevoxResultCode1 Function(
                  ffi.Pointer<VoicevoxSynthesizer>,
                  ffi.Pointer<ffi.Char>,
                  VoicevoxStyleId,
                  ffi.Pointer<ffi.Pointer<ffi.Char>>)>>(
      'voicevox_synthesizer_create_sing_frame_audio_query');
  late final _voicevox_synthesizer_create_sing_frame_audio_query =
      _voicevox_synthesizer_create_sing_frame_audio_queryPtr.asFunction<
          int Function(ffi.Pointer<VoicevoxSynthesizer>, ffi.Pointer<ffi.Char>,
              int, ffi.Pointer<ffi.Pointer<ffi.Char>>)>();

  int voicevox_synthesizer_create_sing_frame_f0(
    ffi.Pointer<VoicevoxSynthesizer> synthesizer,
    ffi.Pointer<ffi.Char> score_json,
    ffi.Pointer<ffi.Char> frame_audio_query_json,
    int style_id,
    ffi.Pointer<ffi.Pointer<ffi.Char>> output_f0_json,
  ) {
    return _voicevox_synthesizer_create_sing_frame_f0(
      synthesizer,
      score_json,
      frame_audio_query_json,
      style_id,
      output_f0_json,
    );
  }

  late final _voicevox_synthesizer_create_sing_frame_f0Ptr = _lookup<
          ffi.NativeFunction<
              VoicevoxResultCode1 Function(
                  ffi.Pointer<VoicevoxSynthesizer>,
                  ffi.Pointer<ffi.Char>,
                  ffi.Pointer<ffi.Char>,
                  VoicevoxStyleId,
                  ffi.Pointer<ffi.Pointer<ffi.Char>>)>>(
      'voicevox_synthesizer_create_sing_frame_f0');
  late final _voicevox_synthesizer_create_sing_frame_f0 =
      _voicevox_synthesizer_create_sing_frame_f0Ptr.asFunction<
          int Function(
              ffi.Pointer<VoicevoxSynthesizer>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              int,
              ffi.Pointer<ffi.Pointer<ffi.Char>>)>();
